{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 30,
  "lineage": "faa90874-322e-565d-8bee-22b241a61c08",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "calc_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-011d19742f14ff9b8",
            "arn": "arn:aws:ec2:ap-southeast-1:866145474218:instance/i-0cbb9a8c737c6f304",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cbb9a8c737c6f304",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2-web",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0fbfb7f76bbabcb92"
              }
            ],
            "primary_network_interface_id": "eni-0fbfb7f76bbabcb92",
            "private_dns": "ip-10-0-1-193.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.193",
            "public_dns": "ec2-54-179-143-64.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.179.143.64",
            "region": "ap-southeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02af1aa5751dc02ad",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-090252ad7d02aa212",
            "tags": {
              "Name": "Calculator-Deployment-Server"
            },
            "tags_all": {
              "Name": "Calculator-Deployment-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02c0a232bb2964ab3"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "866145474218",
            "id": "i-0cbb9a8c737c6f304",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_security_group.calc_sg",
            "aws_subnet.calc_subnet",
            "aws_vpc.calc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "calc_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:866145474218:internet-gateway/igw-0e38f44208fc728f8",
            "id": "igw-0e38f44208fc728f8",
            "owner_id": "866145474218",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "calculator-igw"
            },
            "tags_all": {
              "Name": "calculator-igw"
            },
            "vpc_id": "vpc-0579b640adf6bd35c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.calc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "calc_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:866145474218:route-table/rtb-01d029f55eda20e58",
            "id": "rtb-01d029f55eda20e58",
            "owner_id": "866145474218",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e38f44208fc728f8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0579b640adf6bd35c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "866145474218",
            "id": "rtb-01d029f55eda20e58",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_internet_gateway.calc_igw",
            "aws_vpc.calc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "calc_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa2707c7e6113a8e",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-01d029f55eda20e58",
            "subnet_id": "subnet-090252ad7d02aa212"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.calc_igw",
            "aws_route_table.calc_rt",
            "aws_subnet.calc_subnet",
            "aws_vpc.calc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "calc_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:866145474218:security-group/sg-02c0a232bb2964ab3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02c0a232bb2964ab3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "calculator-security-group",
            "name_prefix": "",
            "owner_id": "866145474218",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0579b640adf6bd35c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "866145474218",
            "id": "sg-02c0a232bb2964ab3",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.calc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "calc_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:866145474218:subnet/subnet-090252ad7d02aa212",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090252ad7d02aa212",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "866145474218",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "calculator-subnet"
            },
            "tags_all": {
              "Name": "calculator-subnet"
            },
            "vpc_id": "vpc-0579b640adf6bd35c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "866145474218",
            "id": "subnet-090252ad7d02aa212",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.calc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "calc_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:866145474218:vpc/vpc-0579b640adf6bd35c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a27c8f9df14288b2",
            "default_route_table_id": "rtb-09cc312b2641a166b",
            "default_security_group_id": "sg-0dbfb8504d090aecb",
            "dhcp_options_id": "dopt-07e099fe98969c2a6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0579b640adf6bd35c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09cc312b2641a166b",
            "owner_id": "866145474218",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "calculator-vpc"
            },
            "tags_all": {
              "Name": "calculator-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "866145474218",
            "id": "vpc-0579b640adf6bd35c",
            "region": "ap-southeast-1"
          }
        }
      ]
    }
  ]
}